@@ -85,7 +85,13 @@ Version 0.9.9.95 - 2005/04/15
           * Hold CTRL to instantly insert the selected text in the message input area (plain text)
             at the current cursor position (may replace any selection in the input area).
           * Hold CTRL-ALT - as above, but inserts formatted text
+
+        * changed hotkeys: Alt-Left/Alt-Right for tab switching to Ctrl-PgUp/PgDown. Alt-Left/Right
+          causes some strange and annoying effects with some non-western keyboard layouts. 
+          Reasons unknown so far.
           
+        + added hotkey to invoke the Protocol Menu: Ctrl-P (works with and without toolbar visible).
+        
 Version 0.9.9.94 - 2005/04/11
 
         * small fix with static avatars and toolbar button hiding.
